--- a/Dashboard.html
+++ b/Dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Dashboard.css">
+    <!-- <link rel="stylesheet" href="Dashboard.css"> -->
     <title>Document</title>
 </head>
 <body>
@@ -23,6 +23,13 @@
     <input type="text" class="description">
     <button class="btn">Publish Blog</button>
 </form>
+<h1>My Blogs</h1>
+
+<img src="" alt="" class="img"><br>
+<div class="render">
+    
+</div>
+<p class="username"></p>
 <!-- header area end  -->
 
 
