--- a/index.html
+++ b/index.html
@@ -3,23 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="log.css">
-    <title>Log in</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div class="container">
-        <div>
-            <h2  >Sign in</h2>
-            <input type="email" placeholder="Email" class="email">
-            <input type="password" placeholder="Password" class="password">
-            <a href="./forgot.html">Forgot password</a>
-        </div>
-        <div>
-            <button class="btn">Log In</button>
-        </div>
-        <a href="register.html">Create a account</a>
+<nav>
+    <div class="home-div">
+    <div class="home-div1">
+    <h1>Personal Blogging App</h1>
+    <div class="home-div2">
+        <button id ='loged'><i class="ri-logout-box-line"></i></button>
     </div>
+    </div>
+    <div class="home-div2">
+        <button><a href="index.html">login</a></button>
+    </div>
+</div>
+</nav>
 
-    <script type="module" src="log.js"></script>
+<nav>
+    <div class="home-nav">
+    </div>
+</nav>
+
+<!-- header area start  -->
+<div class="rendering">
+
+</div>
+<!-- header area end  -->
+
+
+    <script type="module" src="home.js"></script>
 </body>
 </html>
+
