--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,13 +27,18 @@
 </nav>
 
 <!-- header area start  -->
-<div class="rendering">
+ <div class="rendering  container">
 
 </div>
-<!-- header area end  -->
+<!-- header area end   -->
 
 
     <script type="module" src="home.js"></script>
 </body>
 </html>
+
+
+
+
+
 
