--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="home.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
-<nav>
-    <div class="home-div">
-    <div class="home-div1">
-    <h1>Personal Blogging App</h1>
-    <div class="home-div2">
-        <button id ='loged'><i class="ri-logout-box-line"></i></button>
+    <nav>
+        <div class="home-div">
+        <div class="home-div1">
+        <h1>Personal Blogging App</h1>
+        </div>
+        <div class="home-div2">
+            <button id ='loged'><i class="ri-logout-box-line"></i></button>
+        </div>
     </div>
-    </div>
-    <div class="home-div2">
-        <button><a href="index.html">login</a></button>
-    </div>
-</div>
-</nav>
+    </nav>
 
 <nav>
     <div class="home-nav">
     </div>
 </nav>
+
 
 <!-- header area start  -->
  <div class="rendering  container">
