--- a/Dashboard.html
+++ b/Dashboard.html
@@ -27,7 +27,7 @@
 
             <button class="p-btn"><a href="profile.html" class="links"><i class="ri-profile-line"></i></a></button>
 
-            <button class="logout"><i class="ri-logout-box-line"></i></button>
+            <button class="logout"><a href="log.html"><i class="ri-logout-box-line"></i></button></a>
           
         </div>
     </div>
