--- a/profile.html
+++ b/profile.html
@@ -24,9 +24,9 @@
 <img src ='' alt="" class="image"><br>
 <h2 class="user-name">name</h2>
 
-    <!-- <input type="password" placeholder="Password" class="password" required><br> -->
+    <input type="password" placeholder="Password" class="password" required><br>
     <input type="password" placeholder="Confirm Password" class="c-password" required><br>
-    <!-- <input type="password" placeholder="Repeat Password" class="r-password" required><br> -->
+    <input type="password" placeholder="Repeat Password" class="r-password" required><br>
 
  <button class="but">Update password</button>
 </div>
